Migrate to an agent-reader library

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ numpy = "^1.22.2"
 urllib3 = "^1.26.12"
 bs4 = "^0.0.1"
 guidance = "^0.0.57"
-langchain = "^0.0.234"
+langchain = "0.0.216"
 openai = "^0.27.0"
 tiktoken = "^0.4.0"
 nest_asyncio = "^1.5.0"
@@ -19,6 +19,7 @@ streamlit = "^1.22.0"
 pypandoc = "^1.11"
 pyairtable = "^1.5.0"
 python-dotenv = "^1.0.0"
+agent-reader = "^0.2.2"
 
 [tool.poetry.dev-dependencies]
 debugpy = "^1.6.2"
